# Sickulator

./: .gitignore  Buildings.tsx  README.md  Roads.tsx  Sickulator_Map.csv  Sickulator_Map.tmx  Terrain.tsx  pyproject.toml  requirements.txt  setup.cfg  theme.json
sickulator/: __main__.py  agent.py  buildings.py  game.py  grid.py  main.py  menus.py  path_finder.py  settings.py  simulation.py  sprites.py  theme.json  tiles.py
sickulator/map/: Buildings.tsx  Roads.tsx  Terrain.tsx  agentcity.tmx  map.tmx  path_Map.tmx  roguelikeCity_magenta.tsx  samp.tmx  test_map.tmx
src/sickulator/: agent.py  buildings.py  game.py  main.py  map.txt  menus.py  path_finder.py  settings.py  sickulator.py  simulation.py  sprites.py  theme.json  tiles.py
src/sickulator/map/: agentcity.tmx  agentcityO.tmx  galletcity_tiles.tsx  galletcitymap.tmx  path_Map.tmx
