[metadata]
name=sickulator
version=0.10
url=https://github.com/JKornberg/Sickulator/
description=Pandemic Simulator
long_description=file:README

[options]
package_dir =
    =src
packages = sickulator
python_requires=>=3.8,<4
install_requies=
    numpy == 1.20.3
    pygame == 2.0.1
    pygame-gui == 0.5.7
    pygame-menu == 4.1.1
    PyTMX == 3.25

[options.package_data]
    * = *.json, map/*.png, map/*.tsx, map/*.tmx


[options.entry_points]
console_scripts =
    sickulator = sickulator.main:main
